packages/jsii/test/negatives/neg.enum-name.2.ts
///!MATCH_ERROR: Enum names must use TRUMP_CASE: My_Enum

export enum My_Enum {
    Foo,
    Goo
}
